// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RunDataSchema.vue > renders previous nodes schema for AI tools 1`] = `
<div
  class="schema-header"
  data-test-id="run-data-schema-header"
  data-v-46dade00=""
  data-v-c0d66716=""
  id="If"
  type="header"
>
  <div
    class="toggle"
    data-v-c0d66716=""
  >
    <font-awesome-icon-stub
      beat="false"
      beatfade="false"
      border="false"
      bounce="false"
      class="collapse-icon"
      data-v-c0d66716=""
      fade="false"
      fixedwidth="false"
      flash="false"
      flip="false"
      icon="angle-down"
      inverse="false"
      listitem="false"
      pulse="false"
      shake="false"
      spin="false"
      spinpulse="false"
      spinreverse="false"
      swapopacity="false"
      symbol="false"
    />
  </div>
  <div
    class="n8n-node-icon icon icon"
    data-v-c0d66716=""
  >
    <div
      class="nodeIconWrapper"
      style="width: 12px; height: 12px; font-size: 12px; line-height: 12px;"
    >
      <!-- ElementUI tooltip is prone to memory-leaking so we only render it if we really need it -->
      
      <div
        class="icon"
      >
        <img
          class="nodeIconImage"
        />
        <!--v-if-->
      </div>
      
    </div>
  </div>
  <div
    class="title"
    data-v-c0d66716=""
  >
    If 
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="item-count"
    data-test-id="run-data-schema-node-item-count"
    data-v-c0d66716=""
  >
    2 items
  </div>
</div>
`;

exports[`RunDataSchema.vue > renders schema for correct output branch 1`] = `
<div
  class="schema-header"
  data-test-id="run-data-schema-header"
  data-v-46dade00=""
  data-v-c0d66716=""
  id="If"
  type="header"
>
  <div
    class="toggle"
    data-v-c0d66716=""
  >
    <font-awesome-icon-stub
      beat="false"
      beatfade="false"
      border="false"
      bounce="false"
      class="collapse-icon"
      data-v-c0d66716=""
      fade="false"
      fixedwidth="false"
      flash="false"
      flip="false"
      icon="angle-down"
      inverse="false"
      listitem="false"
      pulse="false"
      shake="false"
      spin="false"
      spinpulse="false"
      spinreverse="false"
      swapopacity="false"
      symbol="false"
    />
  </div>
  <div
    class="n8n-node-icon icon icon"
    data-v-c0d66716=""
  >
    <div
      class="nodeIconWrapper"
      style="width: 12px; height: 12px; font-size: 12px; line-height: 12px;"
    >
      <!-- ElementUI tooltip is prone to memory-leaking so we only render it if we really need it -->
      
      <div
        class="icon"
      >
        <img
          class="nodeIconImage"
        />
        <!--v-if-->
      </div>
      
    </div>
  </div>
  <div
    class="title"
    data-v-c0d66716=""
  >
    If 
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="item-count"
    data-test-id="run-data-schema-node-item-count"
    data-v-c0d66716=""
  >
    2 items
  </div>
</div>
`;

exports[`RunDataSchema.vue > renders schema in output pane 1`] = `
<div>
  <div
    class="run-data-schema full-height"
    data-v-46dade00=""
  >
    <!--v-if-->
    <div
      class="full-height"
      data-v-46dade00=""
    >
      
      <div
        class="full-height scroller"
        data-v-46dade00=""
        min-item-size="38"
      >
        
        
        
        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-46dade00=""
          data-v-ce2825e7=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-ce2825e7=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="0"
            data-name="name"
            data-nest-level="0"
            data-node-type=""
            data-path=".name"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-ce2825e7=""
            data-value="{{ $('').item.json.name }}"
          >
            <font-awesome-icon-stub
              beat="false"
              beatfade="false"
              border="false"
              bounce="false"
              class="type-icon"
              data-v-ce2825e7=""
              fade="false"
              fixedwidth="false"
              flash="false"
              flip="false"
              icon="font"
              inverse="false"
              listitem="false"
              pulse="false"
              shake="false"
              size="sm"
              spin="false"
              spinpulse="false"
              spinreverse="false"
              swapopacity="false"
              symbol="false"
            />
            <span
              class="content title"
              data-v-ce2825e7=""
            >
              
              <span>
                <!--v-if-->
                name
              </span>
              
            </span>
          </div>
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-ce2825e7=""
          >
            
            <span>
              <!--v-if-->
              John
            </span>
            
          </span>
        </div>
        
        
        
        
        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-46dade00=""
          data-v-ce2825e7=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-ce2825e7=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="0"
            data-name="age"
            data-nest-level="0"
            data-node-type=""
            data-path=".age"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-ce2825e7=""
            data-value="{{ $('').item.json.age }}"
          >
            <font-awesome-icon-stub
              beat="false"
              beatfade="false"
              border="false"
              bounce="false"
              class="type-icon"
              data-v-ce2825e7=""
              fade="false"
              fixedwidth="false"
              flash="false"
              flip="false"
              icon="hashtag"
              inverse="false"
              listitem="false"
              pulse="false"
              shake="false"
              size="sm"
              spin="false"
              spinpulse="false"
              spinreverse="false"
              swapopacity="false"
              symbol="false"
            />
            <span
              class="content title"
              data-v-ce2825e7=""
            >
              
              <span>
                <!--v-if-->
                age
              </span>
              
            </span>
          </div>
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-ce2825e7=""
          >
            
            <span>
              <!--v-if-->
              22
            </span>
            
          </span>
        </div>
        
        
        
        
        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-46dade00=""
          data-v-ce2825e7=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-ce2825e7=""
          >
            <div
              class="toggle"
              data-v-ce2825e7=""
            >
              <font-awesome-icon-stub
                beat="false"
                beatfade="false"
                border="false"
                bounce="false"
                class="collapse-icon"
                data-v-ce2825e7=""
                fade="false"
                fixedwidth="false"
                flash="false"
                flip="false"
                icon="angle-down"
                inverse="false"
                listitem="false"
                pulse="false"
                shake="false"
                spin="false"
                spinpulse="false"
                spinreverse="false"
                swapopacity="false"
                symbol="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="0"
            data-name="hobbies"
            data-nest-level="0"
            data-node-type=""
            data-path=".hobbies"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-ce2825e7=""
            data-value="{{ $('').item.json.hobbies }}"
          >
            <font-awesome-icon-stub
              beat="false"
              beatfade="false"
              border="false"
              bounce="false"
              class="type-icon"
              data-v-ce2825e7=""
              fade="false"
              fixedwidth="false"
              flash="false"
              flip="false"
              icon="list"
              inverse="false"
              listitem="false"
              pulse="false"
              shake="false"
              size="sm"
              spin="false"
              spinpulse="false"
              spinreverse="false"
              swapopacity="false"
              symbol="false"
            />
            <span
              class="content title"
              data-v-ce2825e7=""
            >
              
              <span>
                <!--v-if-->
                hobbies
              </span>
              
            </span>
          </div>
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-ce2825e7=""
          >
            <span />
          </span>
        </div>
        
        
        
        
        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-46dade00=""
          data-v-ce2825e7=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-ce2825e7=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="0"
            data-name="hobbies[0]"
            data-nest-level="1"
            data-node-type=""
            data-path=".hobbies[0]"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-ce2825e7=""
            data-value="{{ $('').item.json.hobbies[0] }}"
          >
            <font-awesome-icon-stub
              beat="false"
              beatfade="false"
              border="false"
              bounce="false"
              class="type-icon"
              data-v-ce2825e7=""
              fade="false"
              fixedwidth="false"
              flash="false"
              flip="false"
              icon="font"
              inverse="false"
              listitem="false"
              pulse="false"
              shake="false"
              size="sm"
              spin="false"
              spinpulse="false"
              spinreverse="false"
              swapopacity="false"
              symbol="false"
            />
            <span
              class="content title"
              data-v-ce2825e7=""
            >
              
              <span>
                <!--v-if-->
                hobbies[0]
              </span>
              
            </span>
          </div>
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-ce2825e7=""
          >
            
            <span>
              <!--v-if-->
              surfing
            </span>
            
          </span>
        </div>
        
        
        
        
        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-46dade00=""
          data-v-ce2825e7=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-ce2825e7=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="0"
            data-name="hobbies[1]"
            data-nest-level="1"
            data-node-type=""
            data-path=".hobbies[1]"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-ce2825e7=""
            data-value="{{ $('').item.json.hobbies[1] }}"
          >
            <font-awesome-icon-stub
              beat="false"
              beatfade="false"
              border="false"
              bounce="false"
              class="type-icon"
              data-v-ce2825e7=""
              fade="false"
              fixedwidth="false"
              flash="false"
              flip="false"
              icon="font"
              inverse="false"
              listitem="false"
              pulse="false"
              shake="false"
              size="sm"
              spin="false"
              spinpulse="false"
              spinreverse="false"
              swapopacity="false"
              symbol="false"
            />
            <span
              class="content title"
              data-v-ce2825e7=""
            >
              
              <span>
                <!--v-if-->
                hobbies[1]
              </span>
              
            </span>
          </div>
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-ce2825e7=""
          >
            
            <span>
              <!--v-if-->
              traveling
            </span>
            
          </span>
        </div>
        
        
        
      </div>
      
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
</div>
`;

exports[`RunDataSchema.vue > renders schema with spaces and dots 1`] = `
<div>
  <div
    class="run-data-schema full-height"
    data-v-46dade00=""
  >
    <!--v-if-->
    <div
      class="full-height"
      data-v-46dade00=""
    >
      
      <div
        class="full-height scroller"
        data-v-46dade00=""
        min-item-size="38"
      >
        
        
        <div
          class="schema-header"
          data-test-id="run-data-schema-header"
          data-v-46dade00=""
          data-v-c0d66716=""
          id="Manual Trigger"
          type="header"
        >
          <div
            class="toggle"
            data-v-c0d66716=""
          >
            <font-awesome-icon-stub
              beat="false"
              beatfade="false"
              border="false"
              bounce="false"
              class="collapse-icon"
              data-v-c0d66716=""
              fade="false"
              fixedwidth="false"
              flash="false"
              flip="false"
              icon="angle-down"
              inverse="false"
              listitem="false"
              pulse="false"
              shake="false"
              spin="false"
              spinpulse="false"
              spinreverse="false"
              swapopacity="false"
              symbol="false"
            />
          </div>
          <div
            class="n8n-node-icon icon icon-trigger icon icon-trigger"
            data-v-c0d66716=""
          >
            <div
              class="nodeIconWrapper"
              style="width: 12px; height: 12px; font-size: 12px; line-height: 12px;"
            >
              <!-- ElementUI tooltip is prone to memory-leaking so we only render it if we really need it -->
              
              <div
                class="icon"
              >
                <img
                  class="nodeIconImage"
                />
                <!--v-if-->
              </div>
              
            </div>
          </div>
          <div
            class="title"
            data-v-c0d66716=""
          >
            Manual Trigger 
            <!--v-if-->
          </div>
          <font-awesome-icon-stub
            beat="false"
            beatfade="false"
            border="false"
            bounce="false"
            class="trigger-icon"
            data-v-c0d66716=""
            fade="false"
            fixedwidth="false"
            flash="false"
            flip="false"
            icon="bolt"
            inverse="false"
            listitem="false"
            pulse="false"
            shake="false"
            size="xs"
            spin="false"
            spinpulse="false"
            spinreverse="false"
            swapopacity="false"
            symbol="false"
          />
          <div
            class="item-count"
            data-test-id="run-data-schema-node-item-count"
            data-v-c0d66716=""
          >
            1 item
          </div>
        </div>
        
        
        
        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-46dade00=""
          data-v-ce2825e7=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-ce2825e7=""
          >
            <div
              class="toggle"
              data-v-ce2825e7=""
            >
              <font-awesome-icon-stub
                beat="false"
                beatfade="false"
                border="false"
                bounce="false"
                class="collapse-icon"
                data-v-ce2825e7=""
                fade="false"
                fixedwidth="false"
                flash="false"
                flip="false"
                icon="angle-down"
                inverse="false"
                listitem="false"
                pulse="false"
                shake="false"
                spin="false"
                spinpulse="false"
                spinreverse="false"
                swapopacity="false"
                symbol="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="hello world"
            data-nest-level="1"
            data-node-type="n8n-nodes-base.manualTrigger"
            data-path="['hello world']"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-ce2825e7=""
            data-value="{{ $json['hello world'] }}"
          >
            <font-awesome-icon-stub
              beat="false"
              beatfade="false"
              border="false"
              bounce="false"
              class="type-icon"
              data-v-ce2825e7=""
              fade="false"
              fixedwidth="false"
              flash="false"
              flip="false"
              icon="list"
              inverse="false"
              listitem="false"
              pulse="false"
              shake="false"
              size="sm"
              spin="false"
              spinpulse="false"
              spinreverse="false"
              swapopacity="false"
              symbol="false"
            />
            <span
              class="content title"
              data-v-ce2825e7=""
            >
              
              <span>
                <!--v-if-->
                hello world
              </span>
              
            </span>
          </div>
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-ce2825e7=""
          >
            <span />
          </span>
        </div>
        
        
        
        
        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-46dade00=""
          data-v-ce2825e7=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-ce2825e7=""
          >
            <div
              class="toggle"
              data-v-ce2825e7=""
            >
              <font-awesome-icon-stub
                beat="false"
                beatfade="false"
                border="false"
                bounce="false"
                class="collapse-icon"
                data-v-ce2825e7=""
                fade="false"
                fixedwidth="false"
                flash="false"
                flip="false"
                icon="angle-down"
                inverse="false"
                listitem="false"
                pulse="false"
                shake="false"
                spin="false"
                spinpulse="false"
                spinreverse="false"
                swapopacity="false"
                symbol="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="hello world[0]"
            data-nest-level="2"
            data-node-type="n8n-nodes-base.manualTrigger"
            data-path="['hello world'][0]"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-ce2825e7=""
            data-value="{{ $json['hello world'][0] }}"
          >
            <font-awesome-icon-stub
              beat="false"
              beatfade="false"
              border="false"
              bounce="false"
              class="type-icon"
              data-v-ce2825e7=""
              fade="false"
              fixedwidth="false"
              flash="false"
              flip="false"
              icon="cube"
              inverse="false"
              listitem="false"
              pulse="false"
              shake="false"
              size="sm"
              spin="false"
              spinpulse="false"
              spinreverse="false"
              swapopacity="false"
              symbol="false"
            />
            <span
              class="content title"
              data-v-ce2825e7=""
            >
              
              <span>
                <!--v-if-->
                hello world[0]
              </span>
              
            </span>
          </div>
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-ce2825e7=""
          >
            <span />
          </span>
        </div>
        
        
        
        
        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-46dade00=""
          data-v-ce2825e7=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-ce2825e7=""
          >
            <div
              class="toggle"
              data-v-ce2825e7=""
            >
              <font-awesome-icon-stub
                beat="false"
                beatfade="false"
                border="false"
                bounce="false"
                class="collapse-icon"
                data-v-ce2825e7=""
                fade="false"
                fixedwidth="false"
                flash="false"
                flip="false"
                icon="angle-down"
                inverse="false"
                listitem="false"
                pulse="false"
                shake="false"
                spin="false"
                spinpulse="false"
                spinreverse="false"
                swapopacity="false"
                symbol="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="test"
            data-nest-level="3"
            data-node-type="n8n-nodes-base.manualTrigger"
            data-path="['hello world'][0].test"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-ce2825e7=""
            data-value="{{ $json['hello world'][0].test }}"
          >
            <font-awesome-icon-stub
              beat="false"
              beatfade="false"
              border="false"
              bounce="false"
              class="type-icon"
              data-v-ce2825e7=""
              fade="false"
              fixedwidth="false"
              flash="false"
              flip="false"
              icon="cube"
              inverse="false"
              listitem="false"
              pulse="false"
              shake="false"
              size="sm"
              spin="false"
              spinpulse="false"
              spinreverse="false"
              swapopacity="false"
              symbol="false"
            />
            <span
              class="content title"
              data-v-ce2825e7=""
            >
              
              <span>
                <!--v-if-->
                test
              </span>
              
            </span>
          </div>
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-ce2825e7=""
          >
            <span />
          </span>
        </div>
        
        
        
        
        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-46dade00=""
          data-v-ce2825e7=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-ce2825e7=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="more to think about"
            data-nest-level="4"
            data-node-type="n8n-nodes-base.manualTrigger"
            data-path="['hello world'][0].test['more to think about']"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-ce2825e7=""
            data-value="{{ $json['hello world'][0].test['more to think about'] }}"
          >
            <font-awesome-icon-stub
              beat="false"
              beatfade="false"
              border="false"
              bounce="false"
              class="type-icon"
              data-v-ce2825e7=""
              fade="false"
              fixedwidth="false"
              flash="false"
              flip="false"
              icon="hashtag"
              inverse="false"
              listitem="false"
              pulse="false"
              shake="false"
              size="sm"
              spin="false"
              spinpulse="false"
              spinreverse="false"
              swapopacity="false"
              symbol="false"
            />
            <span
              class="content title"
              data-v-ce2825e7=""
            >
              
              <span>
                <!--v-if-->
                more to think about
              </span>
              
            </span>
          </div>
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-ce2825e7=""
          >
            
            <span>
              <!--v-if-->
              1
            </span>
            
          </span>
        </div>
        
        
        
        
        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-46dade00=""
          data-v-ce2825e7=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-ce2825e7=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="test.how"
            data-nest-level="3"
            data-node-type="n8n-nodes-base.manualTrigger"
            data-path="['hello world'][0]['test.how']"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-ce2825e7=""
            data-value="{{ $json['hello world'][0]['test.how'] }}"
          >
            <font-awesome-icon-stub
              beat="false"
              beatfade="false"
              border="false"
              bounce="false"
              class="type-icon"
              data-v-ce2825e7=""
              fade="false"
              fixedwidth="false"
              flash="false"
              flip="false"
              icon="font"
              inverse="false"
              listitem="false"
              pulse="false"
              shake="false"
              size="sm"
              spin="false"
              spinpulse="false"
              spinreverse="false"
              swapopacity="false"
              symbol="false"
            />
            <span
              class="content title"
              data-v-ce2825e7=""
            >
              
              <span>
                <!--v-if-->
                test.how
              </span>
              
            </span>
          </div>
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-ce2825e7=""
          >
            
            <span>
              <!--v-if-->
              ignore
            </span>
            
          </span>
        </div>
        
        
        
        <div
          class="schema-header"
          data-test-id="run-data-schema-header"
          data-v-46dade00=""
          data-v-c0d66716=""
          id="Set2"
          type="header"
        >
          <div
            class="toggle"
            data-v-c0d66716=""
          >
            <font-awesome-icon-stub
              beat="false"
              beatfade="false"
              border="false"
              bounce="false"
              class="collapse-icon"
              data-v-c0d66716=""
              fade="false"
              fixedwidth="false"
              flash="false"
              flip="false"
              icon="angle-down"
              inverse="false"
              listitem="false"
              pulse="false"
              shake="false"
              spin="false"
              spinpulse="false"
              spinreverse="false"
              swapopacity="false"
              symbol="false"
            />
          </div>
          <div
            class="n8n-node-icon icon icon"
            data-v-c0d66716=""
          >
            <div
              class="nodeIconWrapper"
              style="width: 12px; height: 12px; font-size: 12px; line-height: 12px;"
            >
              <!-- ElementUI tooltip is prone to memory-leaking so we only render it if we really need it -->
              
              <div
                class="icon"
              >
                <img
                  class="nodeIconImage"
                />
                <!--v-if-->
              </div>
              
            </div>
          </div>
          <div
            class="title"
            data-v-c0d66716=""
          >
            Set2 
            <!--v-if-->
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
        
        
        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-46dade00=""
          data-v-ce2825e7=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-ce2825e7=""
          >
            <!--v-if-->
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-ce2825e7=""
          >
            
            <span>
              <!--v-if-->
              No fields - item(s) exist, but they're empty
            </span>
            
          </span>
        </div>
        
        
        
      </div>
      
      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
</div>
`;
